Ajuste imagem logo

--- a/SEGURANÇA-INTERNO-WEBFORM.NET/master_page.Master
+++ b/SEGURANÇA-INTERNO-WEBFORM.NET/master_page.Master
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="/placeholder.svg?height=40&width=180" alt="Logo Segurança Interna">
+                        <img src="/icons/img/fqSecurity40x40.jpeg" alt=" Logo Segurança Interna">
                     </a>
                 </div>
 
