--- a/SEGURANÇA-INTERNO-WEBFORM.NET/master_page.Master
+++ b/SEGURANÇA-INTERNO-WEBFORM.NET/master_page.Master
@@ -4,7 +4,7 @@
 <html lang="pt-br">
 <head runat="server">
     <meta charset="utf-8" />
-    <title>Segurança Interna</title>
+    <asp:ContentPlaceHolder ID="head" runat="server" />
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="/icons/img/fqSecurity40x40.jpeg" alt=" Logo Segurança Interna">
+                        <img src="/icons/bloqueado.png" alt="Logo Segurança Interna">
                     </a>
                 </div>
 
